tests/blackbox_tests/desktop-entry-with-legacy-mixed-encoding.desktop
# E: desktop-entry-with-legacy-mixed-encoding

[Desktop Entry]
Type = Application
Name = Gizmo Enhancer
Encoding = Legacy-Mixed
